src/container/main/MyTitle.scss
// COMMON
$checked-color: #00bdb8;

.selected {
  display: flex;
  align-items: center;
  width: 20px;
  height: 10px;

  .checked {
    margin-left: auto;
    position: absolute;
    right: 32px;
    width: 14px;
    height: 10px;

    background-repeat: no-repeat;
    background-size: 14px 10px;
    background-image: url(../../assets/svg/check-primary.svg);
  }
}

.icon-hover {
  &:hover {
    background-color: #f6f8fa;
  }
}

.my-title {
  font-family: 'Montserrat', 'Noto Sans KR', 'Noto Sans JP', 'Noto Sans SC',
    sans-serif;
  position: relative;

  .my-title-titleline {
    position: relative;
    background-color: #fff;
    width: 681px;
    margin: 40px 16px 16px 15px;
    display: flex;
    align-items: center;

    h1 {}

    .info-btn {
      margin-left: 9px;
      background-image: url(../../assets/svg/info_i.svg);
      width: 32px;
      height: 32px;
      background-size: 20px;
      border: none;
      background-repeat: no-repeat;
      background-position: 50%;
      border-radius: 50%;
      // z-index: 7;

      &:hover {
        background-color: #f6f8fa;
      }
    }

    // info motal 부분

    .info-modal-container {
      position: absolute;
      top: -20px;
      right: 66px;
      z-index: 50;

      .motal-triangle {
        width: 19px;
        height: 19px;
        background-color: #52565d;
        position: absolute;
        top: 30px;
        left: -9px;
        transform: rotate(45deg);
        z-index: 2;
        border-bottom-left-radius: 4px;
        border-bottom: 1px solid #969aa2;
        border-left: 1px solid #969aa2;
      }
    }

    .motal-inner {
      width: 320px;
      height: 280px;
      box-shadow: 0 8px 20px 0 rgba(39, 43, 49, 0.2);
      border: 1px solid #969aa2;
      border-radius: 8px;
      background-color: #52565d;

      .close-btn {
        background-image: url(../../assets/svg/close-be-comment.svg);
        background-repeat: no-repeat;
        background-size: 24px 24px;
        width: 24px;
        height: 24px;
        position: absolute;
        right: 8px;
        top: 8px;
        z-index: 3;
      }

      .lottie-container {}

      .motal-inner-description {
        margin-top: -10px;
        display: flex;
        flex-direction: column;
        justify-content: center;
        padding: 15px 16px;
        color: #fff;

        h4 {
          font-weight: 700;
          font-size: 16px;
          letter-spacing: -0.4px;
        }

        p {
          font-weight: 500;
          margin-top: 8px;
          line-height: 20px;
          font-size: 14px;
          letter-spacing: -0.35px;
        }
      }
    }

    // PDF
    .my-title-pdf {
      box-sizing: border-box;
      padding: 11px 16px;
      width: 82px;
      height: 40px;
      margin-left: auto;
      // margin-right: 16px;
      border-radius: 8px;
      border: 1px solid #dde1e7;
      background-color: #fff;
      color: #787d86;
      display: flex;
      justify-content: center;

      .pdf-button {
        display: flex;
        align-items: center;
        justify-content: center;

        .plus-img {
          width: 12px;
          height: 12px;
          vertical-align: middle;
        }

        span {
          font-family: 'Montserrat', 'Noto Sans KR', 'Noto Sans JP',
            'Noto Sans SC', sans-serif;
          font-size: 14px;
          font-weight: 500;
          letter-spacing: -0.35px;
          color: #787d86;
          margin-left: 8px;
          line-height: 1.2;
        }
      }

      &:hover {
        background-color: #f6f8fa;
      }
    }
  }

  // title summary
  .my-title-summary {
    position: relative;
    display: inline-flex;
    margin-left: 16px;

    .middle-dot {
      width: 2px;
      height: 2px;
      align-self: center;
      background-image: url(https://getliner.com/src/images/dot.svg);
    }

    .summary-content {
      margin-right: 10px;
      font-size: 14px;
      font-weight: 500;
      font-stretch: normal;
      font-style: normal;
      line-height: normal;
      letter-spacing: -0.35px;
      color: #787d86;

      &.my-title-summary-highlights {
        margin-left: 10px;
      }
    }
  }
}
/* ... */

